Modified to allow more options and other changes

--- a/src/stylesheets/DownloadForm.scss
+++ b/src/stylesheets/DownloadForm.scss
@@ -36,4 +36,10 @@
       background-color: darken($accent_primary, 10%);
     }
   }
+
+  &__radioBtn {
+    @include makePanel();
+    margin-left: 15px;
+    margin-right: 10px;
+  }
 }
